Omboli solve the websocket and did a test to send messages

--- a/Chats/Omboli/templates/core/base.html
+++ b/Chats/Omboli/templates/core/base.html
@@ -33,6 +33,6 @@
         {% block content %}{% endblock %}
     </div>
 
-    {% block script %}{% endblock %}
+    {% block scripts %}{% endblock %}
 </body>
 </html>
