--- a/Chats/Omboli/templates/core/room.html
+++ b/Chats/Omboli/templates/core/room.html
@@ -1,40 +1,35 @@
 {% extends 'core/base.html' %}
 
-{% block title %} {{ room.name }} | {% endblock %}
+{% block title %}{{ room.name }} | {% endblock %}
 
-{% block content%}
+{% block content %}
 <div class="p-10 lg:p-20 text-center">
     <h1 class="text-3xl lg:text-6xl text-white">{{ room.name }}</h1>
 </div>
 
 <div class="lg:w-2/4 mx-4 lg:mx-auto p-4 bg-white rounded-xl">
-    <div class=" chat-messages space-y-3" id="chat-messages">
-        {% for message in messages %}
-        <div class="p-4 bg-gray-200 rounded-xl">
-            <p class="front-semihold"> {{ message.user.username }}</p>
-            <p>{{ message.content }}</p></div>
-        {% endfor %}
-        </div>
-
-    </div> 
+    <div class="chat-messages space-y-3" id="chat-messages">
+        {% for m in messages %}<b>{{ m.user.username }}</b>: {{ m.content }}<br>{% endfor %}
+    </div>
 </div>
 
-<div class="lg:w-2/4 mx-4 lg:mx-auto p-4 bg-white rounded-xl">
+<div class="lg:w-2/4 mt-6 mx-4 lg:mx-auto p-4 bg-white rounded-xl">
+    <form method="post" action="." class="flex">
+        <input type="text" name="content" class="flex-1 mr-3" placeholder="Your message..." id="chat-message-input">
 
-    <form method="POST" action="." class="flex">
-        <input type="text"  name="content" class="flex-1 mr-3" placeholder="message" id="chat-message-input">
-
-        <button class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700" id="chat-message-submit">Send</button>
+        <button 
+            class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700"
+            id="chat-message-submit"
+        >Submit</button>
     </form>
 </div>
-
 {% endblock %}
 
+{% block scripts %}
+{{ room.slug|json_script:"json-roomname" }}
+{{ request.user.username|json_script:"json-username" }}
 
-{% block script %}
- {{ room.slug|json_script:"json-roomname" }}
- {{ request.user.username|json_script:"json-username" }}
- <script>
+<script>
     const roomName = JSON.parse(document.getElementById('json-roomname').textContent);
     const userName = JSON.parse(document.getElementById('json-username').textContent);
     const chatSocket = new WebSocket(
@@ -45,33 +40,40 @@
         + '/'
     );
 
-    chatSocket.onmessage = function(e){
-        console.log('onmessage')
-
-        const data = JSON.parse(e.data);
-
-        if (data.message) {
-           let html = '<div class="p-4 bg-gray-200 rounded-xl">';
-               html += '<p class="front-semihold">' + data.username + '</p>';
-               html += '<p>' + data.message + '</p></div>';
-        
-            document.querySelector('#chat-messages').innerHTML += html;
-        }else{
-            alert('The message was empty');
-        }
-    }
-
-    chatSocket.onclose = function(e){
+    chatSocket.onclose = function(e) {
         console.log('onclose')
     }
 
+    chatSocket.onmessage = function(e) {
+        const data = JSON.parse(e.data);
 
-    //
+        if (data.message) {
+            document.querySelector('#chat-messages').innerHTML += ('<b>' + data.username + '</b>: ' + data.message + '<br>');
+        } else {
+            alert('The message was empty!')
+        }
+
+        scrollToBottom();
+    };
+
+    document.querySelector('#chat-message-input').focus();
+    document.querySelector('#chat-message-input').onkeyup = function(e) {
+        if (e.keyCode === 13) {
+            document.querySelector('#chat-message-submit').click();
+        }
+    };
 
     document.querySelector('#chat-message-submit').onclick = function(e) {
-        e.preventDefault();
+        e.preventDefault()
+
         const messageInputDom = document.querySelector('#chat-message-input');
         const message = messageInputDom.value;
+
+        console.log({
+            'message': message,
+            'username': userName,
+            'room': roomName
+        })
 
         chatSocket.send(JSON.stringify({
             'message': message,
@@ -81,13 +83,18 @@
 
         messageInputDom.value = '';
 
-        return false;
-    }
+        return false
+    };
 
-    function scrollToBottom(){
-        const objDiv = document.querySelector('#chat-messages');
+    /**
+    * A function for finding the messages element, and scroll to the bottom of it.
+    */
+    function scrollToBottom() {
+        let objDiv = document.getElementById("chat-messages");
         objDiv.scrollTop = objDiv.scrollHeight;
     }
+
+    // Add this below the function to trigger the scroll on load.
     scrollToBottom();
- </script>
-   {% endblock %}
+</script>
+{% endblock %}
